# stablepay-payment-pipeline

./: .cursorrules  .editorconfig  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  README.md  build.gradle.kts  commitlint.config.js  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml  settings.gradle.kts
.github/workflows/: ci-schemas.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
apps/agent-tools-mcp/: pyproject.toml
apps/api/: Dockerfile
apps/auth/: .dockerignore  Dockerfile
apps/dlq-tools/: pyproject.toml
apps/dlq-tools/src/stablepay_dlq_tools/: __init__.py  cli.py  reader.py  replayer.py
apps/dlq-tools/tests/: test_replayer.py
apps/flink-jobs/: build.gradle.kts
apps/lakehouse-jobs/: Dockerfile  pyproject.toml
apps/lakehouse-jobs/src/stablepay_lakehouse/: config.py  main.py  trino_client.py
apps/lakehouse-jobs/src/stablepay_lakehouse/jobs/: __init__.py  catalog_backup.py  compaction.py  orphan_cleanup.py  snapshot_expiry.py
apps/lakehouse-jobs/src/stablepay_lakehouse_jobs/: __init__.py
apps/lakehouse-jobs/tests/: test_catalog_backup.py  test_config.py
apps/llm-agent/: pyproject.toml
apps/simulator/: pyproject.toml
apps/simulator/config/: defaults.yaml  scenarios.yaml
apps/simulator/src/stablepay_simulator/: __init__.py  cli.py  config.py  producer.py
apps/simulator/src/stablepay_simulator/machines/: __init__.py  auxiliary.py  base.py  crypto_payin.py  crypto_payout.py  fiat_payin.py  fiat_payout.py  multi_leg_flow.py
apps/simulator/src/stablepay_simulator/sources/: __init__.py  external_kafka_source.py  faker_source.py  protocol.py  replay_source.py
apps/web/: package.json
buildSrc/: build.gradle.kts
docs/: ADR.md  CODING_STANDARDS.md  JAVA_STANDARDS_README.md  PROJECT_STRUCTURE.md  SETUP.md  TESTING_STANDARDS.md
gradle/: libs.versions.toml
infra/: docker-compose.yml  preflight.py
infra/kafka/: topics.yaml
infra/opensearch/: dlq-events-index-template.json  flows-index-template.json  init.sh  ism-dlq-events-policy.json  ism-flows-policy.json  ism-transactions-policy.json  transactions-index-template.json
infra/superset/: Dockerfile  (+2 more)
schemas/: build.gradle.kts
scripts/: create-github-issues.py  regen-py-schemas.py
(+401 files in other folders)
